# WHSMUN-Selection

./: .gitignore  CLAUDE.md  Countries.txt  README.md  Responses.csv  RoomNumbers.xlsx  WHSMUN 2026 Cleaned.csv  WHSMUN 2026 Registration Form (Responses).csv  assigner.py  committees.py  convert_2026.py  loader.py  lottery.json  main.py  models.py  pyproject.toml  reporter.py
scripts/: convert_2026.py
tests/: test_committees.py  test_countries.py  test_end_to_end.py  test_loader.py  test_request.py  test_roster.py  test_strategy.py
whsmun/: __init__.py  __main__.py  cli.py  committees.py  models.py
whsmun/assignment/: __init__.py  countries.py  errors.py  request.py  strategy.py
whsmun/loader/: __init__.py  _text.py  capacities.py  countries.py  lottery.py  registrations.py
whsmun/reporting/: __init__.py  csv_reader.py  csv_writer.py  roster.py  summary.py
whsmun/templates/: __init__.py  roster_template.xlsx
