[project]
name = "whsmun-selection"
version = "0.1.0"
description = "Assign WHSMUN delegates to committees from registration responses"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
whsmun = "whsmun.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whsmun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
